Added tail file

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -30,6 +30,8 @@ services:
       context: .
       dockerfile: Dockerfile.nightly-jupyter
       target: base
+    volumes: 
+      - tailfile.txt:/setup/tailfile.txt
     command:
       - /bin/sh
       - -c
