--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -15,12 +15,15 @@ services:
       - -c
       - |
         echo "Starting docker-compose's tensorflow-jupyter-gpu"
+        echo "During starting ${NVIDIA_VISIBLE_DEVICES}"
         nvidia-smi
+        
         jupyter notebook --notebook-dir=/tf --ip 0.0.0.0 --no-browser --allow-root
         
     environment:
       ##### run time ###############
       TEST_ENV_VAR: ${TEST_ENV_VAR}
+      NVIDIA_VISIBLE_DEVICES: all
     ports:
       - 1234:8888 
     networks:
