--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,15 +1,14 @@
-version: '3.7'
+version: "3.7"
 
 services:
-
-############################################## GPU containers##############################################################
+  ############################################## GPU containers##############################################################
   tensorflow-jupyter-gpu-manish:
     container_name: tjg-1-manish
     build:
       context: .
-      dockerfile: Dockerfile.tensorflow-gpu-jpyter   
+      dockerfile: Dockerfile.tensorflow-gpu-jpyter
       target: base
-    volumes: 
+    volumes:
       - /home/manishb/setup/ssh-server-setup/containers/tjg-1-manish/notebooks:/notebooks
       - /home/manishb/setup/ssh-server-setup/containers/tjg-1-manish/config:/config
     command:
@@ -19,7 +18,7 @@ services:
         echo "Starting docker-compose's tensorflow-jupyter-gpu"
         # nvidia-smi
         jupyter notebook --config=/config/jupyter_notebook_config --ip 0.0.0.0
-        
+
     environment:
       ##### run time###############
       TEST_ENV_VAR: ${TEST_ENV_VAR}
@@ -34,17 +33,17 @@ services:
       resources:
         reservations:
           devices:
-          -  driver: nvidia
-             count: all
-             capabilities: [gpu]
-#######
+            - driver: nvidia
+              count: all
+              capabilities: [gpu]
+  #######
   tensorflow-jupyter-gpu-niten:
     container_name: tjg-2-niten
     build:
       context: .
-      dockerfile: Dockerfile.tensorflow-gpu-jpyter   
+      dockerfile: Dockerfile.tensorflow-gpu-jpyter
       target: base
-    volumes: 
+    volumes:
       - /home/nitenl/setup/ssh-server-setup/containers/tjg-2-niten/notebooks:/notebooks
       - /home/nitenl/setup/ssh-server-setup/containers/tjg-2-niten/config:/config
     command:
@@ -54,7 +53,7 @@ services:
         echo "Starting docker-compose's tensorflow-jupyter-gpu"
         # nvidia-smi
         jupyter notebook --config=/config/jupyter_notebook_config --ip 0.0.0.0
-        
+
     environment:
       ##### run time###############
       TEST_ENV_VAR: ${TEST_ENV_VAR}
@@ -69,17 +68,17 @@ services:
       resources:
         reservations:
           devices:
-          -   driver: nvidia
+            - driver: nvidia
               count: all
               capabilities: [gpu]
-######
+  ######
   tensorflow-jupyter-gpu-gaurab:
     container_name: tjg-3-gaurab
     build:
       context: .
-      dockerfile: Dockerfile.tensorflow-gpu-jpyter   
+      dockerfile: Dockerfile.tensorflow-gpu-jpyter
       target: base
-    volumes: 
+    volumes:
       - /home/gaurabs/setup/ssh-server-setup/containers/tjg-3-gaurab/notebooks:/notebooks
       - /home/gaurabs/setup/ssh-server-setup/containers/tjg-3-gaurab/config:/config
     command:
@@ -89,7 +88,7 @@ services:
         echo "Starting docker-compose's tensorflow-jupyter-gpu"
         # nvidia-smi
         jupyter notebook --config=/config/jupyter_notebook_config --ip 0.0.0.0
-        
+
     environment:
       ##### run time###############
       TEST_ENV_VAR: ${TEST_ENV_VAR}
@@ -104,17 +103,17 @@ services:
       resources:
         reservations:
           devices:
-          -  driver: nvidia
-             count: all
-             capabilities: [gpu]
-########
+            - driver: nvidia
+              count: all
+              capabilities: [gpu]
+  ########
   tensorflow-jupyter-gpu-subash:
     container_name: tjg-4-subash
     build:
       context: .
-      dockerfile: Dockerfile.tensorflow-gpu-jpyter   
+      dockerfile: Dockerfile.tensorflow-gpu-jpyter
       target: base
-    volumes: 
+    volumes:
       - /home/subashs/setup/ssh-server-setup/containers/tjg-4-subash/notebooks:/notebooks
       - /home/subashs/setup/ssh-server-setup/containers/tjg-4-subash/config:/config
     command:
@@ -124,7 +123,7 @@ services:
         echo "Starting docker-compose's tensorflow-jupyter-gpu"
         # nvidia-smi
         jupyter notebook --config=/config/jupyter_notebook_config --ip 0.0.0.0
-        
+
     environment:
       ##### run time###############
       TEST_ENV_VAR: ${TEST_ENV_VAR}
@@ -139,18 +138,18 @@ services:
       resources:
         reservations:
           devices:
-          -  driver: nvidia
-             count: all
-             capabilities: [gpu]
-########
+            - driver: nvidia
+              count: all
+              capabilities: [gpu]
+  ########
 
   tensorflow-jupyter-gpu-bijaya:
     container_name: tjg-5-bijaya
     build:
       context: .
-      dockerfile: Dockerfile.tensorflow-gpu-jpyter   
+      dockerfile: Dockerfile.tensorflow-gpu-jpyter
       target: base
-    volumes: 
+    volumes:
       - /home/bijayd/setup/ssh-server-setup/containers/tjg-5-bijaya//notebooks:/notebooks
       - /home/bijayd/setup/ssh-server-setup/containers/tjg-5-bijaya//config:/config
     command:
@@ -160,7 +159,7 @@ services:
         echo "Starting docker-compose's tensorflow-jupyter-gpu"
         # nvidia-smi
         jupyter notebook --config=/config/jupyter_notebook_config --ip 0.0.0.0
-        
+
     environment:
       ##### run time###############
       TEST_ENV_VAR: ${TEST_ENV_VAR}
@@ -175,18 +174,18 @@ services:
       resources:
         reservations:
           devices:
-          -  driver: nvidia
-             count: all
-             capabilities: [gpu]
-########
+            - driver: nvidia
+              count: all
+              capabilities: [gpu]
+  ########
 
   tensorflow-jupyter-gpu-roshan:
     container_name: tjg-6-roshan
     build:
       context: .
-      dockerfile: Dockerfile.tensorflow-gpu-jpyter   
+      dockerfile: Dockerfile.tensorflow-gpu-jpyter
       target: base
-    volumes: 
+    volumes:
       - /home/roshans/setup/ssh-server-setup/containers/tjg-6-roshan/notebooks:/notebooks
       - /home/roshans/setup/ssh-server-setup/containers/tjg-6-roshan/config:/config
     command:
@@ -196,7 +195,7 @@ services:
         echo "Starting docker-compose's tensorflow-jupyter-gpu"
         # nvidia-smi
         jupyter notebook --config=/config/jupyter_notebook_config --ip 0.0.0.0
-        
+
     environment:
       ##### run time###############
       TEST_ENV_VAR: ${TEST_ENV_VAR}
@@ -211,18 +210,18 @@ services:
       resources:
         reservations:
           devices:
-          -  driver: nvidia
-             count: all
-             capabilities: [gpu]
-########
+            - driver: nvidia
+              count: all
+              capabilities: [gpu]
+  ########
 
   tensorflow-jupyter-gpu-prakash:
     container_name: tjg-7-prakash
     build:
       context: .
-      dockerfile: Dockerfile.tensorflow-gpu-jpyter   
+      dockerfile: Dockerfile.tensorflow-gpu-jpyter
       target: base
-    volumes: 
+    volumes:
       - /home/prakashd/setup/ssh-server-setup/containers/tjg-7-prakash/notebooks:/notebooks
       - /home/prakashd/setup/ssh-server-setup/containers/tjg-7-prakash/config:/config
     command:
@@ -232,7 +231,7 @@ services:
         echo "Starting docker-compose's tensorflow-jupyter-gpu"
         # nvidia-smi
         jupyter notebook --config=/config/jupyter_notebook_config --ip 0.0.0.0
-        
+
     environment:
       ##### run time###############
       TEST_ENV_VAR: ${TEST_ENV_VAR}
@@ -247,18 +246,19 @@ services:
       resources:
         reservations:
           devices:
-          -  driver: nvidia
-             count: all
-             capabilities: [gpu]
-########
+            - driver: nvidia
+              count: all
+              capabilities: [gpu]
+  ########
 
   tensorflow-jupyter-gpu-bigyan:
     container_name: tjg-8-bigyan
     build:
       context: .
-      dockerfile: Dockerfile.tensorflow-gpu-jpyter   
+      dockerfile: Dockerfile.tensorflow-gpu-jpyter
       target: base
-    volumes: 
+    shm_size: "2gb"
+    volumes:
       - /home/bigyans/setup/ssh-server-setup/containers/tjg-8-bigyan/notebooks:/notebooks
       - /home/bigyans/setup/ssh-server-setup/containers/tjg-8-bigyan/config:/config
     command:
@@ -268,7 +268,7 @@ services:
         echo "Starting docker-compose's tensorflow-jupyter-gpu"
         # nvidia-smi
         jupyter notebook --config=/config/jupyter_notebook_config --ip 0.0.0.0
-        
+
     environment:
       ##### run time###############
       TEST_ENV_VAR: ${TEST_ENV_VAR}
@@ -283,18 +283,18 @@ services:
       resources:
         reservations:
           devices:
-          -  driver: nvidia
-             count: all
-             capabilities: [gpu]
-########
+            - driver: nvidia
+              count: all
+              capabilities: [gpu]
+  ########
 
   tensorflow-jupyter-gpu-sagar:
     container_name: tjg-9-sagar
     build:
       context: .
-      dockerfile: Dockerfile.tensorflow-gpu-jpyter   
+      dockerfile: Dockerfile.tensorflow-gpu-jpyter
       target: base
-    volumes: 
+    volumes:
       - /home/sagara/setup/ssh-server-setup/containers/tjg-9-sagar/notebooks:/notebooks
       - /home/sagara/setup/ssh-server-setup/containers/tjg-9-sagar/config:/config
     command:
@@ -304,7 +304,7 @@ services:
         echo "Starting docker-compose's tensorflow-jupyter-gpu"
         # nvidia-smi
         jupyter notebook --config=/config/jupyter_notebook_config --ip 0.0.0.0
-        
+
     environment:
       ##### run time###############
       TEST_ENV_VAR: ${TEST_ENV_VAR}
@@ -319,18 +319,18 @@ services:
       resources:
         reservations:
           devices:
-          -  driver: nvidia
-             count: all
-             capabilities: [gpu]
-########
+            - driver: nvidia
+              count: all
+              capabilities: [gpu]
+  ########
 
   tensorflow-jupyter-gpu-rk:
     container_name: tjg-10-rk
     build:
       context: .
-      dockerfile: Dockerfile.tensorflow-gpu-jpyter   
+      dockerfile: Dockerfile.tensorflow-gpu-jpyter
       target: base
-    volumes: 
+    volumes:
       - /home/rkl/setup/ssh-server-setup/containers/tjg-10-rk/notebooks:/notebooks
       - /home/rkl/setup/ssh-server-setup/containers/tjg-10-rk/config:/config
     command:
@@ -340,7 +340,7 @@ services:
         echo "Starting docker-compose's tensorflow-jupyter-gpu"
         # nvidia-smi
         jupyter notebook --config=/config/jupyter_notebook_config --ip 0.0.0.0
-        
+
     environment:
       ##### run time###############
       TEST_ENV_VAR: ${TEST_ENV_VAR}
@@ -355,18 +355,18 @@ services:
       resources:
         reservations:
           devices:
-          -  driver: nvidia
-             count: all
-             capabilities: [gpu]
-########
+            - driver: nvidia
+              count: all
+              capabilities: [gpu]
+  ########
 
   tensorflow-jupyter-gpu-jabir:
     container_name: tjg-11-jabir
     build:
       context: .
-      dockerfile: Dockerfile.tensorflow-gpu-jpyter   
+      dockerfile: Dockerfile.tensorflow-gpu-jpyter
       target: base
-    volumes: 
+    volumes:
       - /home/jabirk/setup/ssh-server-setup/containers/tjg-11-jabir/notebooks:/notebooks
       - /home/jabirk/setup/ssh-server-setup/containers/tjg-11-jabir/config:/config
     command:
@@ -376,7 +376,7 @@ services:
         echo "Starting docker-compose's tensorflow-jupyter-gpu"
         # nvidia-smi
         jupyter notebook --config=/config/jupyter_notebook_config --ip 0.0.0.0
-        
+
     environment:
       ##### run time###############
       TEST_ENV_VAR: ${TEST_ENV_VAR}
@@ -391,18 +391,18 @@ services:
       resources:
         reservations:
           devices:
-          -  driver: nvidia
-             count: all
-             capabilities: [gpu]
-########
+            - driver: nvidia
+              count: all
+              capabilities: [gpu]
+  ########
 
   tensorflow-jupyter-gpu-raghib:
     container_name: tjg-12-raghib
     build:
       context: .
-      dockerfile: Dockerfile.tensorflow-gpu-jpyter   
+      dockerfile: Dockerfile.tensorflow-gpu-jpyter
       target: base
-    volumes: 
+    volumes:
       - /home/raghibi/setup/ssh-server-setup/containers/tjg-12-raghib/notebooks:/notebooks
       - /home/raghibi/setup/ssh-server-setup/containers/tjg-12-raghib/config:/config
     command:
@@ -412,7 +412,7 @@ services:
         echo "Starting docker-compose's tensorflow-jupyter-gpu"
         # nvidia-smi
         jupyter notebook --config=/config/jupyter_notebook_config --ip 0.0.0.0
-        
+
     environment:
       ##### run time###############
       TEST_ENV_VAR: ${TEST_ENV_VAR}
@@ -427,18 +427,18 @@ services:
       resources:
         reservations:
           devices:
-          -  driver: nvidia
-             count: all
-             capabilities: [gpu]
-########
+            - driver: nvidia
+              count: all
+              capabilities: [gpu]
+  ########
 
   tensorflow-jupyter-gpu-ashish:
     container_name: tjg-13-ashish
     build:
       context: .
-      dockerfile: Dockerfile.tensorflow-gpu-jpyter   
+      dockerfile: Dockerfile.tensorflow-gpu-jpyter
       target: base
-    volumes: 
+    volumes:
       - /home/ashishs/setup/ssh-server-setup/containers/tjg-13-ashish/notebooks:/notebooks
       - /home/ashishs/setup/ssh-server-setup/containers/tjg-13-ashish/config:/config
     command:
@@ -448,7 +448,7 @@ services:
         echo "Starting docker-compose's tensorflow-jupyter-gpu"
         # nvidia-smi
         jupyter notebook --config=/config/jupyter_notebook_config --ip 0.0.0.0
-        
+
     environment:
       ##### run time###############
       TEST_ENV_VAR: ${TEST_ENV_VAR}
@@ -463,83 +463,115 @@ services:
       resources:
         reservations:
           devices:
-          -  driver: nvidia
-             count: all
-             capabilities: [gpu]
+            - driver: nvidia
+              count: all
+              capabilities: [gpu]
+  ########
+
+  tensorflow-jupyter-gpu-sangam:
+    container_name: tjg-14-sangam
+    build:
+      context: .
+      dockerfile: Dockerfile.tensorflow-gpu-jpyter
+      target: base
+    volumes:
+      - /home/sangamb/setup/ssh-server-setup/containers/tjg-14-sangam/notebooks:/notebooks
+      - /home/sangamb/setup/ssh-server-setup/containers/tjg-14-sangam/config:/config
+    command:
+      - /bin/sh
+      - -c
+      - |
+        echo "Starting docker-compose's tensorflow-jupyter-gpu"
+        # nvidia-smi
+        jupyter notebook --config=/config/jupyter_notebook_config --ip 0.0.0.0
+
+    environment:
+      ##### run time###############
+      TEST_ENV_VAR: ${TEST_ENV_VAR}
+      NVIDIA_VISIBLE_DEVICES: all
+    ports:
+      - 60001:60001
+    networks:
+      - webnet
+    restart: always
+    # tty: true
+    deploy:
+      resources:
+        reservations:
+          devices:
+            - driver: nvidia
+              count: all
+              capabilities: [gpu]
 ########
 
-
-
 ############################################## Non GPU Nightly containers##############################################################
-  # tensorflow-nightly-jupyter-1:
-  #   container_name: tnj-1
-  #   build:
-  #     context: .
-  #     dockerfile: Dockerfile.nightly-jupyter
-  #     target: base
-  #     args: 
-  #       PORT: ${BIGYAN_PORT}
-  #   volumes: 
-  #     - ./containers/tnj-1/notebooks:/notebooks
-  #     - ./containers/tnj-1/config:/config
-  #     # - ./tailfile.txt:/setup/tailfile.txt
-  #   # tty: true
-  #   command:
-  #     - /bin/bash
-  #     - -c
-  #     - |
-  #       echo "Starting docker-compose's tensorflow-nightly-jupyter"
-  #       # jupyter notebook --notebook-dir=/notebooks --ip 0.0.0.0 --no-browser --allow-root
+# tensorflow-nightly-jupyter-1:
+#   container_name: tnj-1
+#   build:
+#     context: .
+#     dockerfile: Dockerfile.nightly-jupyter
+#     target: base
+#     args:
+#       PORT: ${BIGYAN_PORT}
+#   volumes:
+#     - ./containers/tnj-1/notebooks:/notebooks
+#     - ./containers/tnj-1/config:/config
+#     # - ./tailfile.txt:/setup/tailfile.txt
+#   # tty: true
+#   command:
+#     - /bin/bash
+#     - -c
+#     - |
+#       echo "Starting docker-compose's tensorflow-nightly-jupyter"
+#       # jupyter notebook --notebook-dir=/notebooks --ip 0.0.0.0 --no-browser --allow-root
 
-  #       # export JUPYTER_CONFIG_DIR=/config
-  #       # jupyter notebook --generate-config
-        
-  #       jupyter notebook --config=/config/jupyter_notebook_config --ip 0.0.0.0
+#       # export JUPYTER_CONFIG_DIR=/config
+#       # jupyter notebook --generate-config
 
+#       jupyter notebook --config=/config/jupyter_notebook_config --ip 0.0.0.0
 
-  #       # tail -F tailfile.txt
-  #   environment:
-  #     ##### run time###############
-  #     TEST_ENV_VAR: ${TEST_ENV_VAR}
-  #   ports:
-  #     - 1235:1235 
-  #   networks:
-  #     - webnet
-  #   restart: always
+#       # tail -F tailfile.txt
+#   environment:
+#     ##### run time###############
+#     TEST_ENV_VAR: ${TEST_ENV_VAR}
+#   ports:
+#     - 1235:1235
+#   networks:
+#     - webnet
+#   restart: always
 
+# tensorflow-nightly-jupyter-2:
+#   container_name: tnj-2
+#   build:
+#     context: .
+#     dockerfile: Dockerfile.nightly-jupyter
+#     target: base
+#   volumes:
+#     - ./containers/tnj-2/notebooks:/notebooks
+#     - ./containers/tnj-2/config:/config
+#     # - ./tailfile.txt:/setup/tailfile.txt
+#   # tty: true
+#   command:
+#     - /bin/bash
+#     - -c
+#     - |
+#       echo "Starting docker-compose's tensorflow-nightly-jupyter"
+#       # jupyter notebook --notebook-dir=/notebooks --ip 0.0.0.0 --no-browser --allow-root
 
-  # tensorflow-nightly-jupyter-2:
-  #   container_name: tnj-2
-  #   build:
-  #     context: .
-  #     dockerfile: Dockerfile.nightly-jupyter
-  #     target: base
-  #   volumes: 
-  #     - ./containers/tnj-2/notebooks:/notebooks
-  #     - ./containers/tnj-2/config:/config
-  #     # - ./tailfile.txt:/setup/tailfile.txt
-  #   # tty: true
-  #   command:
-  #     - /bin/bash
-  #     - -c
-  #     - |
-  #       echo "Starting docker-compose's tensorflow-nightly-jupyter"
-  #       # jupyter notebook --notebook-dir=/notebooks --ip 0.0.0.0 --no-browser --allow-root
+#       # export JUPYTER_CONFIG_DIR=/config
+#       # jupyter notebook --generate-config
 
-  #       # export JUPYTER_CONFIG_DIR=/config
-  #       # jupyter notebook --generate-config
-        
-  #       jupyter notebook --config=/config/jupyter_notebook_config --ip 0.0.0.0
+#       jupyter notebook --config=/config/jupyter_notebook_config --ip 0.0.0.0
 
-  #       # tail -F tailfile.txt
-  #   environment:
-  #     ##### run time###############
-  #     TEST_ENV_VAR: ${TEST_ENV_VAR}
-  #   ports:
-  #     - 1236:1236 
-  #   networks:
-  #     - webnet
-  #   restart: always
+#       # tail -F tailfile.txt
+#   environment:
+#     ##### run time###############
+#     TEST_ENV_VAR: ${TEST_ENV_VAR}
+#   ports:
+#     - 1236:1236
+#   networks:
+#     - webnet
+#   restart: always
 
 networks:
   webnet:
